// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`grammar > basic.vue 1`] = `
"><div></div>
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^ text.html.vue entity.name.tag.div.html.vue
#    ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
#     ^^ text.html.vue punctuation.definition.tag.begin.html.vue
#       ^^^ text.html.vue entity.name.tag.div.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue"
`;

exports[`grammar > directives.vue 1`] = `
"><template>
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>	<div @click></div>
#^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div @click="{}"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div @click="log('hello'); log('world');"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div #default></div>
#^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div #default="args"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div #></div>
#^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div #="args"></div>
#^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div :key></div>
#^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div :key="{}"></div>
#^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-if="true"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-else-if="true"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-else></div>
#^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-for="n in []"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-if="true" v-else-if="true" v-else></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div :foo="':foo=123'"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div :foo="[{ bar: []}]"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div .prop="[1, 2]"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-a:[({a:1}).a]="1"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-a:[c]></div>
#^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-a:[({a:1}).a].d="[1, 2]"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div @[({a:1}).a].d="[1, 2]" v-d:[2]="3"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div :[1]="value"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-bind="{ id: someProp, 'other-attr': otherProp }"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div :xlink:special.d="3"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-a.c.d="3"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><template lang="pug">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^^^^^^^^^^^ text.html.vue meta.tag-stuff
#                    ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>div(@click)
#^^^^^^^^^^^^ text.html.vue
>div(@click="{}")
#^^^^^^^^^^^^^^^^^ text.html.vue
>div(@click="log('hello'); log('world');")
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>div(#default)
#^^^^^^^^^^^^^^ text.html.vue
>div(#default="args")
#^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>div(#)
#^^^^^^^ text.html.vue
>div(#="args")
#^^^^^^^^^^^^^^ text.html.vue
>div(:key)
#^^^^^^^^^^ text.html.vue
>div(:key="{}")
#^^^^^^^^^^^^^^^ text.html.vue
>div(v-if="true")
#^^^^^^^^^^^^^^^^^ text.html.vue
>div(v-else-if="true")
#^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>div(v-else)
#^^^^^^^^^^^^ text.html.vue
>div(v-for="n in []")
#^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>div(v-if="true" v-else-if="true" v-else)
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>div(:foo="':foo=123'")
#^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>div(:foo="[{ bar: []}]")
#^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>div(.prop="[1, 2]")
#^^^^^^^^^^^^^^^^^^^^ text.html.vue
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><template lang="pug">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^^^^^^^^^^^ text.html.vue meta.tag-stuff
#                    ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>h1.myClass(class="text-right") hello
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>//- https://github.com/vuejs/language-tools/issues/1826
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>h1#myId(class="text-right") hello
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><template lang="html">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^^^^^^^^^^^^ text.html.vue meta.tag-stuff
#                     ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>	<div @click></div>
#^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div @click="{}"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div @click="log('hello'); log('world');"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div #default></div>
#^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div #default="args"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div #></div>
#^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div #="args"></div>
#^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div :key></div>
#^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div :key="{}"></div>
#^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-if="true"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-else-if="true"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-else></div>
#^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-for="n in []"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-if="true" v-else-if="true" v-else></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div :foo="':foo=123'"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div :foo="[{ bar: []}]"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div .prop="[1, 2]"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue"
`;

exports[`grammar > generic.vue 1`] = `
"><script setup generic="T"></script>
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#       ^^^^^^^ text.html.vue meta.tag-stuff
#              ^^^^^^^ text.html.vue meta.tag-stuff meta.attribute.generic.vue entity.other.attribute-name.html.vue
#                     ^ text.html.vue meta.tag-stuff meta.attribute.generic.vue punctuation.separator.key-value.html.vue
#                      ^ text.html.vue meta.tag-stuff meta.attribute.generic.vue meta.type.parameters.vue punctuation.definition.string.begin.html.vue
#                       ^ text.html.vue meta.tag-stuff meta.attribute.generic.vue meta.type.parameters.vue
#                        ^ text.html.vue meta.tag-stuff meta.attribute.generic.vue meta.type.parameters.vue punctuation.definition.string.end.html.vue
#                         ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
#                          ^^ text.html.vue punctuation.definition.tag.begin.html.vue
#                            ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#                                  ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue"
`;

exports[`grammar > inline-style.vue 1`] = `
"><template>
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>	<div style="width: 100%; height: auto;"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><template lang="pug">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^^^^^^^^^^^ text.html.vue meta.tag-stuff
#                    ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>div(style="width: 100%; height: auto;")
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue"
`;

exports[`grammar > jsx.vue 1`] = `
"><script lang="tsx">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#       ^^^^^^^^^^^ text.html.vue meta.tag-stuff
#                  ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>(<Foo
#^^^^^^ text.html.vue
>	class={{ 'foo': 123 }}
#^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>/>);
#^^^^^ text.html.vue
></script>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#        ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><script lang="jsx">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#       ^^^^^^^^^^^ text.html.vue meta.tag-stuff
#                  ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>(<Foo
#^^^^^^ text.html.vue
>	class={{ 'foo': 123 }}
#^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>/>)
#^^^^ text.html.vue
></script>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#        ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue"
`;

exports[`grammar > leading-operator.vue 1`] = `
"><script>
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#       ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>if (false
#^^^^^^^^^^ text.html.vue
>< true
#^^^^^^^ text.html.vue
>) { }
#^^^^^^ text.html.vue
>(
#^^ text.html.vue
><br />
#^^^^^^^ text.html.vue
>);
#^^^ text.html.vue
></script>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#        ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><script lang="js">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#       ^^^^^^^^^^ text.html.vue meta.tag-stuff
#                 ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>if (false
#^^^^^^^^^^ text.html.vue
>< true
#^^^^^^^ text.html.vue
>) {}
#^^^^^ text.html.vue
>(
#^^ text.html.vue
><br />
#^^^^^^^ text.html.vue
>);
#^^^ text.html.vue
></script>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#        ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><script lang="jsx">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#       ^^^^^^^^^^^ text.html.vue meta.tag-stuff
#                  ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>if (false
#^^^^^^^^^^ text.html.vue
>< true
#^^^^^^^ text.html.vue
>) {}
#^^^^^ text.html.vue
>(
#^^ text.html.vue
><br />
#^^^^^^^ text.html.vue
>);
#^^^ text.html.vue
></script>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#        ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><script lang="ts">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#       ^^^^^^^^^^ text.html.vue meta.tag-stuff
#                 ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>if (false
#^^^^^^^^^^ text.html.vue
>< true
#^^^^^^^ text.html.vue
>) {}
#^^^^^ text.html.vue
>interface Foo
#^^^^^^^^^^^^^^ text.html.vue
><T> { value: T; }
#^^^^^^^^^^^^^^^^^^ text.html.vue
></script>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#        ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><script lang="tsx">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#       ^^^^^^^^^^^ text.html.vue meta.tag-stuff
#                  ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>if (false
#^^^^^^^^^^ text.html.vue
>< true
#^^^^^^^ text.html.vue
>) {}
#^^^^^ text.html.vue
>interface Foo
#^^^^^^^^^^^^^^ text.html.vue
><T> { value: T; }
#^^^^^^^^^^^^^^^^^^ text.html.vue
>(
#^^ text.html.vue
><br />
#^^^^^^^ text.html.vue
>);
#^^^ text.html.vue
></script>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#        ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue"
`;

exports[`grammar > namespaced.vue 1`] = `
"><script setup lang="ts">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#       ^^^^^^^^^^^^^^^^ text.html.vue meta.tag-stuff
#                       ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>import { Component } from "vue";
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>import { defineComponent } from "vue";
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>const A = {
#^^^^^^^^^^^^ text.html.vue
>  B: {
#^^^^^^^ text.html.vue
>    C: defineComponent({
#^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>      setup() {
#^^^^^^^^^^^^^^^^ text.html.vue
>        return () => "";
#^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>      },
#^^^^^^^^^ text.html.vue
>    }),
#^^^^^^^^ text.html.vue
>  },
#^^^^^ text.html.vue
>};
#^^^ text.html.vue
>const C: Component & {
#^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue
>  D: Component;
#^^^^^^^^^^^^^^^^ text.html.vue
>} = null!;
#^^^^^^^^^^^ text.html.vue
></script>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#        ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><template>
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>  <A.B.C> {{ A.B.C }} </A.B.C>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>  <A.B.C />
#^^^^^^^^^^^^ text.html.vue text.html.derivative
>  <C>
#^^^^^^ text.html.vue text.html.derivative
>    <C.D> 222 </C.D>
#^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>    <C.D />
#^^^^^^^^^^^^ text.html.vue text.html.derivative
>  </C>
#^^^^^^^ text.html.vue text.html.derivative
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue"
`;

exports[`grammar > script-tag-in-script.vue 1`] = `
"><script>'<script></script>'</script>
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#       ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
#        ^^^^^^^^^ text.html.vue
#                 ^^ text.html.vue punctuation.definition.tag.begin.html.vue
#                   ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#                         ^ text.html.vue punctuation.definition.tag.end.html.vue
#                          ^ text.html.vue
#                           ^ text.html.vue punctuation.definition.tag.begin.html.vue
#                            ^ text.html.vue
#                             ^^^^^^ text.html.vue entity.name.tag.script.html.vue
#                                   ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>
#^ text.html.vue"
`;

exports[`grammar > tag-starts-with-template.vue 1`] = `
"><template>
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>    <template-foo></template-foo>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>    <template:foo></template:foo>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>    <template-foo bar></template-foo>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>    <template-foo>{{ 0 }}</template-foo>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>    <template.foo[0].bar></template.foo[0].bar>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>    <template-foo />
#^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>    <template-foo/>
#^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue"
`;

exports[`grammar > template-expression.vue 1`] = `
"><template>
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>	<div v-if="var as XXX"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-if="var instanceof XXX"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-if="typeof xxx"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-if="typeof XXX"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
>	<div v-if="''.toString('xxx')"></div>
#^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ text.html.vue text.html.derivative
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue"
`;

exports[`grammar > template-in-template.vue 1`] = `
"><template>
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>	<template>
#^ text.html.vue text.html.derivative
# ^ text.html.vue text.html.derivative meta.template-tag.start punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue text.html.derivative meta.template-tag.start entity.name.tag.template.html.vue
#          ^ text.html.vue text.html.derivative meta.template-tag.start punctuation.definition.tag.end.html.vue
>		<template></template>
#^^ text.html.vue text.html.derivative meta.template-tag.start meta.template-tag.end
#  ^ text.html.vue text.html.derivative meta.template-tag.start meta.template-tag.end meta.template-tag.start punctuation.definition.tag.begin.html.vue
#   ^^^^^^^^ text.html.vue text.html.derivative meta.template-tag.start meta.template-tag.end meta.template-tag.start entity.name.tag.template.html.vue
#           ^ text.html.vue text.html.derivative meta.template-tag.start meta.template-tag.end meta.template-tag.start punctuation.definition.tag.end.html.vue
#            ^^ text.html.vue text.html.derivative meta.template-tag.start meta.template-tag.end meta.template-tag.start meta.template-tag.end punctuation.definition.tag.begin.html.vue
#              ^^^^^^^^ text.html.vue text.html.derivative meta.template-tag.start meta.template-tag.end meta.template-tag.start meta.template-tag.end entity.name.tag.template.html.vue
#                      ^ text.html.vue text.html.derivative meta.template-tag.start meta.template-tag.end meta.template-tag.start punctuation.definition.tag.end.html.vue
>	</template>
#^ text.html.vue text.html.derivative meta.template-tag.start meta.template-tag.end
# ^^ text.html.vue text.html.derivative meta.template-tag.start meta.template-tag.end punctuation.definition.tag.begin.html.vue
#   ^^^^^^^^ text.html.vue text.html.derivative meta.template-tag.start meta.template-tag.end entity.name.tag.template.html.vue
#           ^ text.html.vue text.html.derivative meta.template-tag.start punctuation.definition.tag.end.html.vue
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue
><template lang="pug">
#^ text.html.vue punctuation.definition.tag.begin.html.vue
# ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#         ^^^^^^^^^^^ text.html.vue meta.tag-stuff
#                    ^ text.html.vue meta.tag-stuff punctuation.definition.tag.end.html.vue
>template
#^^^^^^^^^ text.html.vue
>	template
#^^^^^^^^^^ text.html.vue
></template>
#^^ text.html.vue punctuation.definition.tag.begin.html.vue
#  ^^^^^^^^ text.html.vue entity.name.tag.template.html.vue
#          ^ text.html.vue punctuation.definition.tag.end.html.vue
>
#^ text.html.vue"
`;
